--- a/loja-app/src/index.html
+++ b/loja-app/src/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>LojaApp</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>window.__theme = 'bs4';</script>
 </head>
 <body>
   <app-root></app-root>
